fetch=EAGER - de evitat